Commit current changes, actually start work Ditch router, will fuck up the sessions and not really needed Update express, express-session Add sourcequery, ws, express-ws Move code around from www to app.js Read .todo for the rest of valuable changes

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,11 @@
 extends layout
 
 block content
-	h1= name
-	p Welcome!
+	h1 Re-Dream Control Panel
+	p Welcome, <b>#{user.username}</b>! Is there anything you need to do today?
+	pre
+	input(type="text")
+	button Go
+	br
+	br
+	a(href="/logout") Log Out
