--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,15 @@
 doctype html
 html
 	head
-		title= title
-		link(rel='stylesheet', href='/stylesheets/style.css')
+		if result
+			title Re-Dream Control Panel: #{result}
+		else
+			title Re-Dream Control Panel
+		link(rel="stylesheet", href="/css/style.css")
+		if user && user.username
+			script(src="http://code.jquery.com/jquery-3.3.1.min.js")
+			script(src="/js/main.js")
 	body
-		block content
+		.container
+			.content
+				block content
