--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,22 +11,31 @@ body {
 }
 
 div.container {
-	text-align: center;
-	height: 100%;
-	width: 100%;
+	background-color: rgba(247, 250, 254, 0.875);
+	padding: 24px;
+	height: calc(100% - 48px);
+	min-height: calc(100vh - 48px);
+	width: calc(100% - 48px);
 }
 div.content {
-	display: inline-block;
-	background-color: rgba(247, 250, 254, 0.90);
 	border-radius: 16px;
-	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.75);
-	max-width: 75%;
-	text-align: left;
-	margin-top: 10vh;
-	padding: 24px;
+	max-width: 66%;
+	height: 100%;
+	display: block;
+	border-radius: 0;
+	margin-top: 5%;
+	margin-bottom: 5%;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0;
+	background: none;
 }
-div.content h1 {
+div.content h1, h2 {
 	margin-top: 0;
+}
+div.content h3 {
+	margin: 0;
+	margin-bottom: 4px;
 }
 pre {
 	display: block;
@@ -40,29 +49,36 @@ pre {
 	white-space: -pre-wrap;
 	white-space: -o-pre-wrap;
 	font-size: 12.5px;
+	width: auto;
+	max-width: 100%;
 }
 pre:empty {
 	display: none;
 }
-
-@media screen and (max-width: 800px) {
-	div.container {
-		background-color: rgba(247, 250, 254, 0.90);
-		padding: 24px;
-		height: calc(100% - 48px);
-		min-height: calc(100vh - 48px);
-		width: calc(100% - 48px);
-	}
-	div.content {
-		width: 100%;
-		max-width: 100%;
-		height: 100%;
-		display: block;
-		border-radius: 0;
-		margin-top: 0;
-		padding: 0;
-		box-shadow: 0px 0px 0px;
-		background: none;
-	}
+li {
+	list-style-type: none;
+	margin-bottom: 4px;
+}
+ul {
+	margin-top: 8px;
+}
+button {
+	margin-left: 4px;
+	margin-right: 4px;
+}
+button[type="submit"] {
+	margin-left: 0;
+}
+div.config-option {
+	margin-top: 16px;
 }
 
+@media screen and (max-width: 800px) {
+	div.content {
+		max-width: 100%;
+		margin-top: 0;
+		margin-bottom: 0;
+		margin-left: 0;
+		margin-right: 0;
+	}
+}
