--- a/views/index.pug
+++ b/views/index.pug
@@ -1,37 +1,51 @@
 extends layout
 
 block content
-	h1 Re-Dream Control Panel
-	p Welcome, <b>#{user.username}</b>! Is there anything you need to do today?
-	pre.output
-	input(type="text" name="cmd")
-	button(type="submit") Go
-	br
-	br
-	a(href="/logout") Log Out
-	| #{" - "}
-	a(href="/config") Config
-	br
-	br
-	h2 Server status
-	if server.info && server.players
-		h3= server.info.name
-		small
-			| Map: <code>#{server.info.map}</code>
-			br
-			| <b>#{server.info.players}</b> players out of <b>#{server.info.maxplayers}</b>:
-		if server.info.players > 0
-			-
-				function pad(num) {
-					return ("00" + num).slice(-2)
-				}
-			pre
-				each ply in server.players
-					-
-						var h = Math.floor(ply.online / 60 / 60)
-						var m = Math.floor(ply.online / 60 - h * 60)
-						var s = Math.floor(ply.online - m * 60 - h * 60 * 60)
-						var time = h > 1 ? util.format("%s:%s:%s", pad(h), pad(m), pad(s)) : util.format("%s:%s", pad(m), pad(s));
-					| #{ply.name} - #{time + "\n"}
-	else
-		h3 Server seems offline..?
+	.container
+		.columns.cols-centered
+			.column.col-3
+				.panel
+					.panel-header.text-center
+						h4.panel-title Control Panel
+					.panel-body
+						pre.code(v-html="output || 'Start with the help command.'")
+					.panel-footer
+						.input-group
+							input.form-input(type="text" v-model="cmd" v-on:keyup.enter="sendCommand" placeholder="help")
+							button.btn.btn-primary.input-group-btn(type="submit" v-on:click="sendCommand") Run
+			.column.col-3
+				.panel
+					.panel-header.text-center
+						h4.panel-title Server Status
+						if server.info
+							.panel-subtitle= server.info.name
+					.panel-body
+						if server.info && server.players
+							pre.py-0.my-1
+								.icon.icon-location.mx-1
+								= server.info.map
+							.py-0.my-1
+								.icon.icon-people.mx-1
+								= server.info.players + " / " + server.info.maxplayers
+					.panel-footer
+						if !server.info
+							.text-error Server offline
+						else if server.info && server.players
+							if server.info.players > 0
+								table.table.table-striped
+									thead: tr
+										th Name
+										th Time online
+									tbody: tr
+										-
+											function pad(num) {
+												return ("00" + num).slice(-2)
+											}
+										each ply in server.players
+											-
+												var h = Math.floor(ply.online / 60 / 60)
+												var m = Math.floor(ply.online / 60 - h * 60)
+												var s = Math.floor(ply.online - m * 60 - h * 60 * 60)
+												var time = h > 1 ? util.format("%s:%s:%s", pad(h), pad(m), pad(s)) : util.format("%s:%s", pad(m), pad(s));
+											td= ply.name
+											td= time
