--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,17 +7,33 @@ html
 			script var pugLocals = !{values.replace(/#<\//g, "<\\/")}
 		script(src="http://code.jquery.com/jquery-3.3.1.min.js")
 		script(src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js")
+		script(src="/js/cookie.js")
 		script(src="/js/main.js")
 	body
-		#app
+		#app(v-bind:class="{ 'dark-theme': darkTheme }")
 			header.navbar
-				section.navbar-section
+				section.navbar-section(style="margin-left: 10%;")
 					a.btn.btn-link(href="/") Home
-				section.navbar-center
-					img(src="/img/logo.png" height=32 style="padding: 4px;")
-				section
-				section.navbar-section
+				section.navbar-center(v-if="!darkTheme")
+					img(src="/img/logo.png" height=32)
+				section.navbar-section(style="margin-right: 10%;")
 					a.btn.btn-link(href="/logout") Logout
 					a.btn.btn-link(href="/config") Configuration
 			h1.text-center Re-Dream
+			.columns.flex-x-center.my-2(v-if="finished")
+				.col-2.col-sm-12
+					.toast.toast-primary(v-bind:class="{ 'toast-success': success, 'toast-error': failed }" v-html="reason")
 			block content
+			footer
+				.footer-section
+					label.form-checkbox.ml-2.pr-0
+						input(type="checkbox" v-model=("darkTheme") v-on:change="saveTheme")
+						i.form-icon
+						| Dark Theme
+				.footer-center
+					a(href="https://re-dream.org") re-dream.org
+					| &nbsp;- created by&nbsp;
+					a(href="https://tenrys.pw") Tenrys
+					| &nbsp;-&nbsp;
+					a(href="https://github.com/Re-Dream/rcon") GitHub
+				.footer-section
