--- a/views/index.pug
+++ b/views/index.pug
@@ -17,7 +17,7 @@ block content
 					.panel-footer
 						.input-group
 							input.form-input(type="text" v-model="cmd" v-on:keyup.enter="sendCommand()" placeholder="help")
-							button.btn.btn-primary.input-group-btn(type="submit" v-on:click="sendCommand()") Run
+							button.btn.btn-primary.input-group-btn(type="submit" v-on:click="sendCommand()" v-bind:disabled="running" v-bind:class="{ loading: running }") Run
 			.column.col-3.col-xl-4.col-lg-5.col-md-6.col-sm-12
 				.panel
 					.panel-header.text-center
