--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,10 +5,10 @@ html
 		link(rel="stylesheet" href="/css/style.css")
 		if values
 			script var pugLocals = !{values.replace(/#<\//g, "<\\/")}
-		script(src="http://code.jquery.com/jquery-3.3.1.min.js")
+		script(src="https://code.jquery.com/jquery-3.3.1.min.js")
 		script(src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js")
-		script(src="/js/cookie.js")
-		script(src="/js/main.js")
+		script(src="./js/cookie.js")
+		script(src="./js/main.js")
 	body
 		#app(v-bind:class="{ 'dark-theme': darkTheme }")
 			header.navbar
