--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
 	head
 		title Re-Dream Control Panel
-		link(rel="stylesheet" href="/css/style.css")
+		link(rel="stylesheet" href="./css/style.css")
 		if values
 			script var pugLocals = !{values.replace(/#<\//g, "<\\/")}
 		script(src="https://code.jquery.com/jquery-3.3.1.min.js")
